--- a/subway_challenge.ipynb
+++ b/subway_challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 188,
    "id": "b9216edd-790b-4da1-bac3-0d3923e09653",
    "metadata": {},
    "outputs": [],
@@ -13,265 +13,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 142,
    "id": "c9fa79fa-b94b-4314-8851-86caceed2136",
    "metadata": {},
    "outputs": [],
    "source": [
     "STOPS_FILE = 'google_transit/stops.csv'\n",
+    "STOP_TIMES = 'google_transit/stop_times.csv'\n",
+    "TRIPS_FILE = 'google_transit/trips.csv'\n",
+    "SHAPES_FILE = 'google_transit/shapes.csv'\n",
     "\n",
     "def get_stops():\n",
-    "    stops = []\n",
     "    stops_df = pd.read_csv(STOPS_FILE)\n",
     "    return stops_df\n",
+    "\n",
+    "def get_stop_times():\n",
+    "    stop_times_df = pd.read_csv(STOP_TIMES)\n",
+    "    return stop_times_df\n",
+    "\n",
+    "def get_trips():\n",
+    "    trips_df = pd.read_csv(TRIPS_FILE)\n",
+    "    return trips_df\n",
+    "\n",
+    "def get_shapes():\n",
+    "    shapes_df = pd.read_csv(SHAPES_FILE)\n",
+    "    return shapes_df\n",
     "\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
-    "stops = get_stops()"
+    "stops = get_stops()\n",
+    "stop_times = get_stop_times()\n",
+    "trips = get_trips()\n",
+    "raw_paths = get_shapes()\n",
+    "\n",
+    "def get_stop_str(lat, lon):\n",
+    "  return str(lat) + '_' + str(lon)\n",
+    "\n",
+    "parent_stops = stops[stops['location_type'] == 1.0]\n",
+    "lat_lon_to_stop_id = {}\n",
+    "for index, row in parent_stops.iterrows():\n",
+    "  lat_lon_to_stop_id[get_stop_str(row['stop_lat'], row['stop_lon'])] = row['stop_id']\n",
+    "\n",
+    "def get_stop_id(lat, lon):\n",
+    "  return lat_lon_to_stop_id.get(get_stop_str(lat, lon), None)\n",
+    "\n",
+    "def get_stop_from_id(stop_id):\n",
+    "  return stops[stops['stop_id'] == stop_id].iloc[0]['stop_name']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>stop_id</th>\n",
-       "      <th>stop_name</th>\n",
-       "      <th>stop_lat</th>\n",
-       "      <th>stop_lon</th>\n",
-       "      <th>location_type</th>\n",
-       "      <th>parent_station</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>101</td>\n",
-       "      <td>Van Cortlandt Park-242 St</td>\n",
-       "      <td>40.889248</td>\n",
-       "      <td>-73.898583</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>101N</td>\n",
-       "      <td>Van Cortlandt Park-242 St</td>\n",
-       "      <td>40.889248</td>\n",
-       "      <td>-73.898583</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>101S</td>\n",
-       "      <td>Van Cortlandt Park-242 St</td>\n",
-       "      <td>40.889248</td>\n",
-       "      <td>-73.898583</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>103</td>\n",
-       "      <td>238 St</td>\n",
-       "      <td>40.884667</td>\n",
-       "      <td>-73.900870</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>103N</td>\n",
-       "      <td>238 St</td>\n",
-       "      <td>40.884667</td>\n",
-       "      <td>-73.900870</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>103</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1492</th>\n",
-       "      <td>S30N</td>\n",
-       "      <td>Tompkinsville</td>\n",
-       "      <td>40.636949</td>\n",
-       "      <td>-74.074835</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1493</th>\n",
-       "      <td>S30S</td>\n",
-       "      <td>Tompkinsville</td>\n",
-       "      <td>40.636949</td>\n",
-       "      <td>-74.074835</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1494</th>\n",
-       "      <td>S31</td>\n",
-       "      <td>St George</td>\n",
-       "      <td>40.643748</td>\n",
-       "      <td>-74.073643</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1495</th>\n",
-       "      <td>S31N</td>\n",
-       "      <td>St George</td>\n",
-       "      <td>40.643748</td>\n",
-       "      <td>-74.073643</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1496</th>\n",
-       "      <td>S31S</td>\n",
-       "      <td>St George</td>\n",
-       "      <td>40.643748</td>\n",
-       "      <td>-74.073643</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>S31</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1497 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     stop_id                  stop_name   stop_lat   stop_lon  location_type  \\\n",
-       "0        101  Van Cortlandt Park-242 St  40.889248 -73.898583            1.0   \n",
-       "1       101N  Van Cortlandt Park-242 St  40.889248 -73.898583            NaN   \n",
-       "2       101S  Van Cortlandt Park-242 St  40.889248 -73.898583            NaN   \n",
-       "3        103                     238 St  40.884667 -73.900870            1.0   \n",
-       "4       103N                     238 St  40.884667 -73.900870            NaN   \n",
-       "...      ...                        ...        ...        ...            ...   \n",
-       "1492    S30N              Tompkinsville  40.636949 -74.074835            NaN   \n",
-       "1493    S30S              Tompkinsville  40.636949 -74.074835            NaN   \n",
-       "1494     S31                  St George  40.643748 -74.073643            1.0   \n",
-       "1495    S31N                  St George  40.643748 -74.073643            NaN   \n",
-       "1496    S31S                  St George  40.643748 -74.073643            NaN   \n",
-       "\n",
-       "     parent_station  \n",
-       "0               NaN  \n",
-       "1               101  \n",
-       "2               101  \n",
-       "3               NaN  \n",
-       "4               103  \n",
-       "...             ...  \n",
-       "1492            S30  \n",
-       "1493            S30  \n",
-       "1494            NaN  \n",
-       "1495            S31  \n",
-       "1496            S31  \n",
-       "\n",
-       "[1497 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 124,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "142\n",
+      "139\n",
+      "138\n",
+      "137\n",
+      "136\n",
+      "135\n",
+      "134\n",
+      "133\n",
+      "132\n",
+      "131\n",
+      "130\n",
+      "129\n",
+      "128\n",
+      "127\n",
+      "126\n",
+      "125\n",
+      "124\n",
+      "123\n",
+      "122\n",
+      "121\n",
+      "120\n",
+      "119\n",
+      "118\n",
+      "117\n",
+      "116\n",
+      "115\n",
+      "114\n",
+      "113\n",
+      "112\n",
+      "111\n",
+      "110\n",
+      "109\n",
+      "108\n",
+      "107\n",
+      "106\n",
+      "104\n",
+      "103\n",
+      "101\n"
+     ]
     }
    ],
    "source": [
-    "stops"
+    "path_n03r = raw_paths[raw_paths['shape_id'] == '1..N03R']\n",
+    "for index, row in path_n03r.iterrows(): \n",
+    "  if(get_stop_id(row['shape_pt_lat'], row['shape_pt_lon']) != None):\n",
+    "    print(get_stop_id(row['shape_pt_lat'], row['shape_pt_lon']))\n",
+    "  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Name                                                               86th St\n",
-       "(Latitude, Longitude)              (40.77949199820952, -73.95558899985132)\n",
-       "Lines                                         ['4', '5', '6', '6 Express']\n",
-       "Alternate ID                                                           626\n",
-       "Northbound               ['01:36:30', '01:36:30', '01:36:30', '01:54:00...\n",
-       "Southbound               ['00:31:30', '00:31:30', '00:31:30', '00:43:30...\n",
-       "Name: 450, dtype: object"
+       "\"\\nstops is self explanatory. There are 499 stops in the system. (We might need to exclude the staten island ones later)\\nStop ID, Stop Name, stop lat, and lon helps us uniquely identify each with shapes later\\n\\nshapes essentially describes the path of each train line. 2..N03R\\tfor example describes New Lots Ave to Wakefield-241 St and 1..N03R describes South Ferry to Van Cortlandt Park-242 St.\\nBoth technically belong to the 1 train, but have different starting and endpoints. \\n\\nlet's ignore stop times for now\\n\""
       ]
      },
-     "execution_count": 93,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "schedule.iloc[450]"
+    "'''\n",
+    "stops is self explanatory. There are 499 stops in the system. (We might need to exclude the staten island ones later)\n",
+    "Stop ID, Stop Name, stop lat, and lon helps us uniquely identify each with shapes later\n",
+    "\n",
+    "shapes essentially describes the path of each train line. 2..N03R\tfor example describes New Lots Ave to Wakefield-241 St and 1..N03R describes South Ferry to Van Cortlandt Park-242 St.\n",
+    "Both technically belong to the 1 train, but have different starting and endpoints. \n",
+    "\n",
+    "let's ignore stop times for now\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "all_stations_from_line = set()\n",
-    "for line, stations in line_data.items():\n",
-    "    for station in stations:\n",
-    "        all_stations_from_line.add(station[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 96,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "359"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(all_stations_from_line)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
