hmm add comments

--- a/subway_challenge.ipynb
+++ b/subway_challenge.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,60 +70,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "142\n",
-      "139\n",
-      "138\n",
-      "137\n",
-      "136\n",
-      "135\n",
-      "134\n",
-      "133\n",
-      "132\n",
-      "131\n",
-      "130\n",
-      "129\n",
-      "128\n",
-      "127\n",
-      "126\n",
-      "125\n",
-      "124\n",
-      "123\n",
-      "122\n",
-      "121\n",
-      "120\n",
-      "119\n",
-      "118\n",
-      "117\n",
-      "116\n",
-      "115\n",
-      "114\n",
-      "113\n",
-      "112\n",
-      "111\n",
-      "110\n",
-      "109\n",
-      "108\n",
-      "107\n",
-      "106\n",
-      "104\n",
-      "103\n",
-      "101\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['Eastchester-Dyre Av',\n",
+       " 'Baychester Av',\n",
+       " 'Gun Hill Rd',\n",
+       " 'Pelham Pkwy',\n",
+       " 'Morris Park',\n",
+       " 'E 180 St',\n",
+       " 'West Farms Sq-E Tremont Av',\n",
+       " '174 St',\n",
+       " 'Freeman St',\n",
+       " 'Simpson St',\n",
+       " 'Intervale Av',\n",
+       " 'Prospect Av',\n",
+       " 'Jackson Av',\n",
+       " '3 Av-149 St',\n",
+       " '149 St-Grand Concourse',\n",
+       " '138 St-Grand Concourse',\n",
+       " '125 St',\n",
+       " '116 St',\n",
+       " '110 St',\n",
+       " '103 St',\n",
+       " '96 St',\n",
+       " '86 St',\n",
+       " '77 St',\n",
+       " '68 St-Hunter College',\n",
+       " '59 St',\n",
+       " '51 St',\n",
+       " 'Grand Central-42 St',\n",
+       " '33 St',\n",
+       " '28 St',\n",
+       " '23 St',\n",
+       " '14 St-Union Sq',\n",
+       " 'Astor Pl',\n",
+       " 'Bleecker St',\n",
+       " 'Spring St',\n",
+       " 'Canal St',\n",
+       " 'Brooklyn Bridge-City Hall',\n",
+       " 'Fulton St',\n",
+       " 'Wall St',\n",
+       " 'Bowling Green',\n",
+       " 'Borough Hall',\n",
+       " 'Hoyt St',\n",
+       " 'Nevins St',\n",
+       " 'Atlantic Av-Barclays Ctr',\n",
+       " 'Bergen St',\n",
+       " 'Grand Army Plaza',\n",
+       " 'Eastern Pkwy-Brooklyn Museum',\n",
+       " 'Franklin Av-Medgar Evers College',\n",
+       " 'President St-Medgar Evers College',\n",
+       " 'Sterling St',\n",
+       " 'Winthrop St',\n",
+       " 'Church Av',\n",
+       " 'Beverly Rd',\n",
+       " 'Newkirk Av-Little Haiti',\n",
+       " 'Flatbush Av-Brooklyn College']"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "path_n03r = raw_paths[raw_paths['shape_id'] == '1..N03R']\n",
-    "for index, row in path_n03r.iterrows(): \n",
-    "  if(get_stop_id(row['shape_pt_lat'], row['shape_pt_lon']) != None):\n",
-    "    print(get_stop_id(row['shape_pt_lat'], row['shape_pt_lon']))\n",
-    "  "
+    "\n",
+    "def get_stop_ids_for_shape_id(shape_id):\n",
+    "  stop_ids = []\n",
+    "  for index, row in raw_paths[raw_paths['shape_id'] == shape_id].iterrows():\n",
+    "    stop_id = get_stop_id(row['shape_pt_lat'], row['shape_pt_lon'])\n",
+    "    if(stop_id != None):\n",
+    "      stop_ids.append(stop_id)\n",
+    "  return stop_ids\n",
+    "\n",
+    "\n",
+    "test_stop_ids = get_stop_ids_for_shape_id('5..S03R')\n",
+    "[get_stop_from_id(stop_id) for stop_id in test_stop_ids]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "stops is self explanatory. There are 499 stops in the system. (We might need to exclude the staten island ones later)\n",
+    "Stop ID, Stop Name, stop lat, and lon helps us uniquely identify each with shapes later\n",
+    "\n",
+    "shapes essentially describes the path of each train line. 2..N03R\tfor example describes New Lots Ave to Wakefield-241 St and 1..N03R describes South Ferry to Van Cortlandt Park-242 St.\n",
+    "Both technically belong to the 1 train, but have different starting and endpoints. \n",
+    "\n",
+    "let's ignore stop times for now\n",
+    "\n",
+    "Let's start with part 1, imagine it takes the same time go between station, you don't ever have to wait for any trains, what is the minimum number of steps it takes to traverse all stations."
    ]
   },
   {
@@ -142,17 +183,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "'''\n",
-    "stops is self explanatory. There are 499 stops in the system. (We might need to exclude the staten island ones later)\n",
-    "Stop ID, Stop Name, stop lat, and lon helps us uniquely identify each with shapes later\n",
-    "\n",
-    "shapes essentially describes the path of each train line. 2..N03R\tfor example describes New Lots Ave to Wakefield-241 St and 1..N03R describes South Ferry to Van Cortlandt Park-242 St.\n",
-    "Both technically belong to the 1 train, but have different starting and endpoints. \n",
-    "\n",
-    "let's ignore stop times for now\n",
-    "'''"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
